Changed proj/exp info color and exp job location color. Fixed spacing on projects tiles

--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -4,11 +4,11 @@ $white: #FFFFFF;
 $black: #000000;
 $bluetext: #007DEE;
 $h1-title: #006495;
-$h3-title: #006495;
+$h3-title: #C25B56;
 $quote: #F2635F;
 $quoter: #FCF4D9;
 $navbar-hover: #00AAA0;
-$info: #FF7A5A;
+$info: #525564;
 $submit: #00AAA0;
 $formErr: #F2635F;
 $input-field-focus: #F2635F;
