--- a/sass/experiences.scss
+++ b/sass/experiences.scss
@@ -14,7 +14,7 @@ $ms-ratio: $golden;
 .xp {
     margin: 10px auto 0px auto;
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     display: inline-block;
     padding: 20px 0 20px 0;
     overflow: hidden;
