--- a/sass/projects.scss
+++ b/sass/projects.scss
@@ -24,7 +24,7 @@ $ms-ratio: $golden;
 .kbbq {
     margin: 10px auto;
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     display: inline-block;
     padding: 20px 0 20px 0;
     overflow: hidden;
@@ -38,6 +38,7 @@ $ms-ratio: $golden;
         font-weight: 100;
         text-align: center;
         color: $h1-title;
+        margin: auto auto 10px auto;
     }
 
     .desc {
@@ -51,7 +52,7 @@ $ms-ratio: $golden;
     }
 
     .info {
-        margin: 10px 0 0 0;
+        margin: 20px 0 0 0;
         font-family: $roboto;
         font-size: 10pt;
         font-weight: 400;
@@ -70,14 +71,15 @@ $ms-ratio: $golden;
 
 //Fancy Gradient Line
 .or-spacer {
-  margin-top: 35px;
+  margin-top: 45px;
   position:relative; 
   
   .mask { 
     overflow:hidden; height:20px; 
     &:after { 
       content:''; 
-      display:block; margin:-25px auto 0;
+      display:block; 
+      margin:-25px auto 0;
       width:100%; height:25px;  
       border-radius:125px / 12px;  
       box-shadow:0 0 8px black;
